fix(access-react): ImagePlugin: align menu icons are not aligned

--- a/packages/access-react/src/reacts/image/view/style.css
+++ b/packages/access-react/src/reacts/image/view/style.css
@@ -20,6 +20,7 @@
   left: 50%;
   transform: translateX(-50%);
   height: 28px;
+  line-height: 20px;
   background: #fff;
   white-space: nowrap;
   border-radius: 2px;
